--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
     background-size: cover;
     
 }
+
+
+
 main {
     height: 100%;
     width: 100%;
@@ -16,6 +19,8 @@ main {
     align-items: center;
     flex-direction: column;
 }
+
+
 
 header {
     height: 4rem;
@@ -46,6 +51,8 @@ header > span {
     border-radius: 5px;
 }
 
+
+
 .form-container  div{
     width: 100%;
     display: flex;
@@ -54,6 +61,15 @@ header > span {
     align-items: center;
 }
 
+.form-container  div > label{
+    margin-top: 0.5rem;
+    font-size: 1rem;
+    text-align: left;
+    width: 80%;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-shadow: 1px 1px 10px red;
+}
 
 input {
     width: 80%;
@@ -68,7 +84,7 @@ input {
     color: white;
     box-shadow: 1px 1px 5px rgb(255, 255, 255);
     border-radius: 5px;
-
+    border-bottom: 3px solid blue;
 }
 
 .d-none {
@@ -92,6 +108,8 @@ button:hover {
     box-shadow: 1px 1px 10px rgb(40, 0, 216);
     font-size: 2.2rem;
 }
+
+
 
 
 
