--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ header > span {
     font-weight: bold;
     font-size: 4rem;
     color: white;
+    text-shadow: 1px 20px 20px rgb(255, 255, 255);
 }
 
 
@@ -40,15 +41,16 @@ header > span {
     margin-top: 2rem;
     height: auto;
     padding: 2rem;
-    width: 35%;
-    border: 2px solid rgb(255, 0, 0);
+    width: 30%;
+    border: 2px solid rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2rem;
     flex-direction: column;
-    box-shadow: 2px 2px 20px white;
+    box-shadow: 1px 1px 30px rgb(255, 255, 255);
     border-radius: 5px;
+    background-color: rgb(0, 0, 0, 0.3);
 }
 
 
@@ -62,13 +64,13 @@ header > span {
 }
 
 .form-container  div > label{
-    margin-top: 0.5rem;
+    margin-top: 0.9rem;
     font-size: 1rem;
     text-align: left;
     width: 80%;
-    color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
     font-weight: bold;
-    text-shadow: 1px 1px 10px red;
+    text-shadow: 1px 1px 10px rgb(0, 0, 0);
 }
 
 input {
@@ -78,13 +80,12 @@ input {
     font-weight: bolder;
     padding: 0.5rem;
     border: none;
-    border-bottom: 2px solid black;
     outline: none;
     background-color: transparent;
     color: white;
-    box-shadow: 1px 1px 5px rgb(255, 255, 255);
+    box-shadow: 1px 2px 1px rgb(255, 0, 0);
     border-radius: 5px;
-    border-bottom: 3px solid blue;
+    border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 .d-none {
@@ -92,21 +93,26 @@ input {
 }
 
 button {
-    width: 80%;
+    width: 40%;
     height: 3rem;
-    box-shadow: 1px 1px 5px rgb(255, 0, 0);
+    box-shadow: 1px 1px 20px rgb(0, 0, 0);
     border-radius: 5px;
     border: none;
     background-color: black;
     color: white;
     font-size: 2rem;
     font-weight: bolder;
+    transition: 0.1s ease-in-out;
 }
 
 button:hover {
     cursor: pointer;
-    box-shadow: 1px 1px 10px rgb(40, 0, 216);
-    font-size: 2.2rem;
+    box-shadow: 1px 1px 10px rgb(255, 255, 255);
+    border: 3px solid black;
+    background-image: url("https://blogger.googleusercontent.com/img/a/AVvXsEgTIDrBHdG30PVm7G9_fvqXxWK27u4RYiY1yg52h5qN9guU4wl8Nazf0wSiNALDuiG32mgFipDV5_fMfoHcznfY6abtqjsvpLYdZgihcUngROEAAy3ViAbEFWpd4UNiq5rbfaJQt-tuBZ1LYRsSGedmLH_twKYUxqo9E--Kespi_9TBoQjbechIK_hBxeKQ=s2160-rw");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100%;
 }
 
 
